2008-02-22  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/atom.cpp (GetAngle): Return 0.0 for the angle if the vectors
	are too small. (The angle is ill-defined in these cases, so this
	is better than returning NaN.)

	* src/forcefields/forcefieldghemical.cpp: Remove some rare
	divide-by-zero errors (e.g., when atoms are on top of each other).

2008-02-22 Chris Morley

	* src/mol.cpp(AssignSpinMultiplicity): Move the functionality
	recently removed from AddHydrogens() to here. Don't assign spin
	multiplicity to multi-atom molecules with no bonds.
	Molecules specified only by elemental formula from thermoformat,
	cmlformat and smilesformat seem to be handled ok.
	
	* src/formats/xml/cmlformat.cpp: handle <atomArray> occurring as
	a child of, formula> as well child of <molecule>.
	DoAtoms) Rewrite so that not confused when multiple sets of
	atom coordinates are present.
	
	* include/openbabel/forcefield.h: include float.h
	
	* windows-vc2005/babelconfig.h: add defines for IsNan and isfinite

	* src/descriptor.cpp: remove define for IsNan

	* test/files/FormulaTest.smi: correct the SMILES for carbene and
	add CH3D

2008-02-21  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/forcefield.cpp (WeightedRotorSearch): Check each individual
	rotor setting in isolation and use Boltzmann initial weightings.
	(*RotorSearch): Make sure to call Energy() evaluations without
	gradients.

	* src/rotamer.cpp (SetRotorToAngle): Remove unlikely (but
	possible) divide-by-zero error.

	* src/forcefields/forcefieldghemical.cpp: Fix divide-by-zero error
	in calculation of torsional term. Should be bullet-proof now.

	* src/formats/mdlformat.cpp: Fix rare crash when handling invalid
	alias records.

	* src/formats/msiformat.cpp: Remove debugging information and fix
	various bugs (e.g., dummy atoms).

2008-02-21  Marcus D. Hanwell  <marcus@cryos.org>

	* src/formats/gausscubeformat.cpp: Simplified the cube reading code,